<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GetStartedActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_get_started"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_get_started_layout"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:background="@drawable/bg_black_color_gradient"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/lbl_app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_heading_1x"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/lbl_dot"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/text_heading_2x"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/lbl_greeting_detail"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetStarted"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_xxlarge"
            android:background="@drawable/button_primary_color_rounded"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/lbl_get_started"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white" />


    </LinearLayout>

</RelativeLayout>