<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <include
        android:id="@+id/vpLoginHeader"
        layout="@layout/viewpod_auth_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_xxlarge"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/button_white_color_rounded"
            android:hint="@string/lbl_email"
            android:padding="@dimen/margin_medium_2"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@drawable/primary_cursor"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_large"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/button_white_color_rounded"
            android:hint="@string/lbl_password"
            android:padding="@dimen/margin_medium_2"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@drawable/primary_cursor"
            android:inputType="textPassword"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/lbl_forgot_password"
        android:textAlignment="textEnd"
        android:textColor="@color/color_dark_grey"
        android:textSize="@dimen/text_regular" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_xxlarge"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginSignIn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/lbl_sign_in"
            android:backgroundTint="@color/color_primary"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"
            app:cornerRadius="@dimen/margin_medium_2"
            app:strokeColor="@color/color_grey" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/lbl_sign_in_wit_google"
            android:textAllCaps="false"
            android:textColor="@color/color_grey"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"
            app:cornerRadius="@dimen/margin_medium_2"
            app:icon="@drawable/ic_google"
            app:iconTint="@null"
            app:strokeColor="@color/color_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/lbl_dont_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/lbl_sign_up"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/text_regular_2x"
                 />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>